--- a/style.css
+++ b/style.css
@@ -1,8 +1,55 @@
-#coming-soon {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
-    font-size: 80px;
-    margin:auto;
-    padding-left:50px;
-    height:400;
+body {
+    height: 100%;   
+    overflow: hidden;  /*makes the body non-scrollable (we will add scrolling to the sidebar and main content containers)*/
+    margin: 0px;  /*removes default style*/
+    display: flex;  /*enables flex content for its children*/
+    box-sizing: border-box;
 }
+html {
+    height: 100%;
+}
+
+img {
+    object-fit: contain;
+  }
+
+#button-wrap{
+    padding-top:200px;
+}
+
+#sidebar{
+    width:20%;
+    flex-shrink: 0;
+    flex-grow: 1;  /*ensures that the container will take up the full height of the parent container*/
+    overflow-y: auto;  /*adds scroll to this container*/
+   
+}
+
+#main{
+    width:80%;
+    flex-grow: 1;  /*ensures that the container will take up the full height of the parent container*/
+    overflow-y: auto;  /*adds scroll to this container*/
+
+   
+}
+
+.column {
+    height: 100%;  /*allows both columns to span the full height of the browser window*/
+    display: flex;
+    flex-direction: column;  /*places the left and right headers above the bottom content*/
+}
+
+
+/*button*/
+
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  line-height: 1.5;
+  font: 700 1.2rem 'Roboto Slab', sans-serif;
+  padding: 1em 2em;
+  letter-spacing: 0.05rem;
+  
+}
+
