--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ img {
 }
 
 #button-wrap {
-  padding-top: 200px;
+  padding-top: 60px;
 }
 
 #sidebar {
@@ -51,10 +51,11 @@ img {
   background: none;
   border: none;
   cursor: pointer;
-  line-height: 1.5;
+  line-height: 1.3;
   font: 700 1.2rem "Roboto Slab", sans-serif;
   padding: 1em 2em;
   letter-spacing: 0.05rem;
+  width: 100%;
 }
 
 .btn.btn-sm {
@@ -74,10 +75,21 @@ img {
   width: auto;
 }
 
+#nitro.work-sub img {
+  height: 600px;
+  width: auto;
+}
+
 .work-sub {
-  overflow-x: scroll;
+  overflow-x: auto;
   height: 900px;
   width: 1800px;
+  overflow-y: hidden;
+}
+
+#nitro.work-sub {
+  width: 2200px;
+  padding-top: 100px;
 }
 
 /*/variables*/
