--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ img {
   height: auto;
 }
 
+.buttons {
+  padding-left: 25px;
+}
+
 /*button*/
 .btn {
   background: none;
@@ -162,8 +166,8 @@ img {
 }
 .effect a {
   text-decoration: none !important;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
