--- a/style.scss
+++ b/style.scss
@@ -75,6 +75,9 @@ img {
   padding-left:150px;
   height:auto;
 }
+.buttons{
+  padding-left:25px;
+}
 
 /*button*/
 
@@ -160,8 +163,8 @@ $font-size: 25px;
   
   a {
     text-decoration: none !important;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
